# nrmc

./: .gitignore  LICENSE.txt  README.md  ToDoList.txt  generateBatchScripts.py  main.sh  meta.yaml  setup.cfg  setup.py  storyBoard.md
data/Alamance/: Alamance_P__AREAS.txt  Alamance_P__BORDERLENGTHS.txt  Alamance_P__CENTROIDS.txt  Alamance_P__EL12G_PR.txt  Alamance_P__EL14G_USS.txt  Alamance_P__EL16G_GV.txt  Alamance_P__EL16G_LG.txt  Alamance_P__MetaData.txt  Alamance_P__POPULATION.txt
data/BigonDual_0_5/: edgeData.txt  metaData.txt  nodeData.txt
data/BigonDual_2_5/: edgeData.txt  metaData.txt  nodeData.txt
data/DuplinOnslow/: Duplin_C_Onslow_P__AREAS.txt  Duplin_C_Onslow_P__BLACK_AP.txt  Duplin_C_Onslow_P__BORDERLENGTHS.txt  Duplin_C_Onslow_P__CENTROIDS.txt  Duplin_C_Onslow_P__EL08G_AD.txt  Duplin_C_Onslow_P__EL08G_AG.txt  Duplin_C_Onslow_P__EL08G_CA.txt  Duplin_C_Onslow_P__EL08G_CI.txt  Duplin_C_Onslow_P__EL08G_CL.txt  Duplin_C_Onslow_P__EL08G_GV.txt  Duplin_C_Onslow_P__EL08G_LG.txt  Duplin_C_Onslow_P__EL08G_PR.txt  (+22 more)
enumeration/: enumHelpers.py  findEnergies.py  pairDownCompactness.py  pairDownPopulation.py  pairDownTraversals.py  reportCompactness.py  runElections.py  runElections2.py  smallestCircle.py
src/: acf.py  analytics.py  biconnected.pyx  centerOfMassFlow.py  center_of_mass.py  constraints.py  constructor.py  core.py  district_to_district.py  energy.py  exampleScript.py  graphGenerator.py  initializer.py  lattice.py  mergeSplit.py  metropolisHastings.py  precinct_flow.py  precint_flow.py  setup.py  single_node_flip.py  state.py
tests/: core_test.py
(+81 files in other folders)
