[metadata]
name = nrmc
version = 0.0.1
description = Description
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Evan Wyse
author_email = evan.wyse@duke.edu
url = https://github.com/
download_urls = https://pypi.org/project/
project_urls =
	Documentation = https://github.com/
	Code = https://github.com/
	Issue tracker = https://github.com/
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.6
package_dir = =src
packages = find:

[options.packages.find]
where = src

